--- a/css/variables.css
+++ b/css/variables.css
@@ -2,6 +2,6 @@
     --font-color-1: #eee;
 }
 @font-face {
-    font-family: "Montserrat-SemiBold.ttf";
+    font-family: "Montserrat-SemiBold";
     src: url(../storage/fonts/Montserrat-SemiBold.ttf)
 }
