--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    /* background-image: url(../storage/img/banner.png); */
+}
 
             /*** Header ***/
 
@@ -16,9 +19,8 @@
     align-items: center;
     position: absolute;
     width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 5px;
+    padding: 5px 20px;
+    z-index: 10;
 }
 
 .div__logo{
@@ -45,4 +47,13 @@
 .ul__menu li{
     list-style: none;
     font-family: "Montserrat-SemiBold";
+}
+.ul__menu li a{
+    color: var(--font-color-1);
+    text-decoration: none;
+    transition: opasity 0.3s ease;
+}
+
+.ul__menu li a:hover{
+    opacity: 0.8;
 }
