--- a/css/variables.css
+++ b/css/variables.css
@@ -1,7 +1,14 @@
 :root{
     --font-color-1: #eee;
+    --color-gradient-2: #071917;
+    --banner-1: url(../storage/img/banner.png);
 }
-@font-face {
+@font-face{
     font-family: "Montserrat-SemiBold";
     src: url(../storage/fonts/Montserrat-SemiBold.ttf)
+}
+
+@font-face{
+    font-family: "Montserrat-Medium";
+    src: url(../storage/fonts/Montserrat-Medium.ttf);
 }
