--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ body{
     padding: 15px;
 }
 .article__home span{
-    background-color: black;
+    background-color: grey;
     padding: 15px;
 }
 .article__home h1{
