--- a/css/variables.css
+++ b/css/variables.css
@@ -1,5 +1,6 @@
 :root{
     --font-color-1: #eee;
+    --color-gradient-1: #376e4014;
     --color-gradient-2: #071917;
     --banner-1: url(../storage/img/banner.png);
 }
