--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,8 @@
             /*** Header ***/
 
 .header{
-    /* background-color: blue;
-    padding: 15px; */
+    /* background-color: blue; */
+    /* padding: 15px; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -21,21 +21,21 @@
 }
 
 .div__logo{
-    /* background-color: red;
-    padding: 15px; */
+    /* background-color: red; */
+    /* padding: 15px; */
 }
 .div__logo img{
 
 }
 
 .div__menu{
-    /* background-color: blanchedalmond;
-    padding: 15px; */
+    /* background-color: blanchedalmond; */
+    /* padding: 15px; */
 }
 
 .ul__menu{
-    /* background-color: violet;
-    padding: 15px; */
+    /* background-color: violet; */
+    /* padding: 15px; */
     display: flex;
     gap: 100px;
     padding-right: 100px;
@@ -59,37 +59,59 @@
 
 .main{
     /* background-color: rebeccapurple; */
-    padding: 15px;
+    /* padding: 15px; */
 }
 
 .section__home{
     background-image: linear-gradient(var(--color-gradient-1), var(--color-gradient-2) 100%), var(--banner-1);
-    /* background-color: beige; */
-    padding: 15px;
+    /* background-color: red; */
+    background-size: cover;
+    background-position: cover;
+    background-repeat: no-repeat;
+    height: 135svh;
+    /* padding: 15px; */
 }
 
 .article__home{
     /* background-color: aqua; */
-    padding: 15px;
+    /* padding: 15px; */
+    width: 626px;
+    height: 360px;
+    position: relative;
+    left: 21svw;
+    top: 36svh;
+    flex-direction: column;
+    gap: 5px;
+    color: var(--font-color-1);
 }
 .article__home span{
     /* background-color: grey; */
-    padding: 15px;
+    font-style: 28px;
+    font-family: "Montserrat-SemiBold";
+    /* padding: 15px; */
 }
 .article__home h1{
     /* background-color: white; */
-    padding: 15px;
+    font-size: 75px;
+    font-family: "Montserrat-SemiBold";
+    /* padding: 15px; */
 }
 .article__home p{
     /* background-color: brown; */
-    padding: 15px;
+    width: 340px;
+    font-family: "Montserrat-Medium";
+    /* padding: 15px; */
 }
 
+            /*** Menu ***/
+
 .section__ellipses{
-    /* background-color: lightgreen; */
-    padding: 15px;
+    background-color: #071917;
+    display: flex;
+    justify-content: space-between;
+    /* padding: 15px; */
 }
 .section__ellipses img{
     /* background-color: red; */
-    padding: 15px;
+    /* padding: 15px; */
 }
