feat: :recycle: Optimized work section restructuring
Optimized restructuring of the work section & divs addition.

--- a/css/style.css
+++ b/css/style.css
@@ -166,41 +166,19 @@
 
             /*** Work ***/
 
-.section__firstwork{
+.section__work{
     background-color: yellow;
     padding: 15px;
 }
-.section__firstwork img{
+.section__work div{
+    background-color: red;
+    padding: 15px;
+}
+.section__work img{
     background-color: blue;
     padding: 15px;
 }
-.section__firstwork p{
-    background-color: whitesmoke;
-    padding: 15px;
-}
-
-.section__secondwork{
-    background-color: rebeccapurple;
-    padding: 15px;
-}
-.section__secondwork img{
-    background-color: beige;
-    padding: 15px;
-}
-.section__secondwork p{
-    background-color: whitesmoke;
-    padding: 15px;
-}
-
-.section__thirdwork{
-    background-color: aqua;
-    padding: 15px;
-}
-.section__thirdwork img{
-    background-color: white;
-    padding: 15px;
-}
-.section__thirdwork p{
+.section__work p{
     background-color: whitesmoke;
     padding: 15px;
 }
