--- a/css/variables.css
+++ b/css/variables.css
@@ -4,12 +4,16 @@
     --color-gradient-2: #071917;
     --banner-1: url(../storage/img/banner.png);
 }
+
 @font-face{
     font-family: "Montserrat-SemiBold";
     src: url(../storage/fonts/Montserrat-SemiBold.ttf)
 }
-
 @font-face{
     font-family: "Montserrat-Medium";
     src: url(../storage/fonts/Montserrat-Medium.ttf);
+}
+@font-face {
+    font-family: "Montserrat-Regular";
+    src: url(../storage/fonts/Montserrat-Regular.ttf); 
 }
