feat: :construction: Add Carousel CSS under construction
Add work CSS under construction first part.

--- a/css/variables.css
+++ b/css/variables.css
@@ -1,5 +1,6 @@
 :root{
     --font-color-1: #eee;
+    --box-color-1: #145E2A;
     --color-gradient-1: #376e4014;
     --color-gradient-2: #071917;
     --banner-1: url(../storage/img/banner.png);
