--- a/css/style.css
+++ b/css/style.css
@@ -201,23 +201,70 @@
             /*** Carousel ***/
 
 .section__carousel{
-    background-color: red;
-    padding: 15px;
+    /* background-color: red; */
+    padding-top: 1.7vw ;
+    display: flex;
+    gap: 2vw;
+    flex-direction: row;
+    width: 100%;
+    overflow-x: scroll;
+    padding-bottom: 1.7vw;
+    box-sizing: content-box;
+    /* padding: 15px; */
 }
 
 .div__box{
-    background-color: blue;
-    padding: 15px;
+    background-color:var(--box-color-1);
+    width: 27vw;
+    height: 42.5vw;
+    flex-shrink: 0;
+    border-radius: 2.5vw;
+    display: flex;
+    flex-direction: column;
+    color: var(--color-1);
+    gap: 1.5vw;
+    /* padding: 15px; */
 }
 .div__box img{
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
+    display: flex;
+    padding-top: 1.7vw;
+    width: 25vw;
+    height: auto;
+    align-self: center;
+
     padding: 15px;
 }
 .div__box h1{
-    background-color: blueviolet;
+    /* background-color: blueviolet; */
+    display: flex;
+    font-size: 2vw;
+    height: auto;
+    align-self: center;
+    font-family: "Montserrat-SemiBold";
     padding: 15px;
 }
 .div__box p{
-    background-color: yellowgreen;
+    /* background-color: yellowgreen; */
+    display: flex;
+    font-size: 1.2vw;
+    height: auto;
+    align-self: center;
+    font-family: "Montserrat-Regular";
     padding: 15px;
 }
+
+.div__box button{
+    display: flex;
+    border-radius: 1.5vw;
+    height: 3vw;
+    align-self: center;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2vw;
+    width: 8.5vw;
+    background-color: var(--color-1);
+    cursor: pointer;
+    border: none;
+    font-family: "Montserrat-Regular";
+    }
